change db and table

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "postgres",
     "password": "abc",
-    "database": "test_product",
+    "database": "authenticate",
     "host"    : "localhost",
     "port"    : 5432,
     "dialect" : "postgres",
