--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "body-parser": "^1.17.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
-    "express": "^4.15.2",
+    "express": "^4.15.3",
     "express-session": "^1.15.2",
     "jsonwebtoken": "^7.4.0",
     "morgan": "^1.8.1",
+    "nunjucks": "^3.0.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-github2": "^0.1.10",
